--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,10 @@
     <!-- Footer -->
-    <footer>
-        <div class="copyright">
-            <p>&copy;<script>document.write(new Date().getFullYear())</script> ZingLab. All rights reserved.</p>
-            <p>This site contains affiliate links. We may earn a commission on qualifying purchases.</p>
+
+
+    <footer class="site-footer">
+        <div class="container">
+            <p>&copy; {{ 'now' | date: "%Y" }} UpperCrumbs. All rights reserved.</p>
+            <p>UpperCrumbs is owned and operated by ZingLab LLC</p>
+            <a class="zinglab" href="https://zinglab.com/?ref=uppercrumbs" target="_blank"><br>Site Managed by ZingLab.com</a>
         </div>
-        <a href="https://zinglab.com/?ref=uppercrumbs" target="_blank"><span class="material-symbols-outlined">experiment</span><br>Site Managed by ZingLab.com</a>
     </footer>
