--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,5 +1,5 @@
 <div class="property-contact">
     <h2>Looking to Sell?</h2>
-    <p>Contact us today to schedule a private showing of this exceptional residence.</p>
-    <a href="mailto:contact@zinglab.com" class="contact-button">Request Showing</a>
+    <p>Contact us to get a landing page for your property today.</p>
+    <a href="mailto:uppercrumbs@zinglab.com?subject=Sell%20on%20UpperCrumbs&body=My%20address%20is%20..." class="contact-button">Email for information</a>
 </div>
