--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,10 @@ body {
     letter-spacing: 0.3px;
 }
 
+br {
+    margin-bottom: 1em;
+}
+
 .container {
     max-width: 1400px;
     margin: 0 auto;
@@ -77,6 +81,7 @@ body {
     text-decoration: none;
     letter-spacing: 1px;
     transition: var(--transition-fast);
+    padding-right: 1em;
 }
 
 .logo:hover {
@@ -310,7 +315,6 @@ body {
     color: #ffffff;
     text-align: center;
     padding: 40px 0;
-    margin-top: 120px;
 }
 
 .site-footer p {
