logo and favicon

--- a/_layouts/property.html
+++ b/_layouts/property.html
@@ -47,7 +47,7 @@
                             target="_blank" rel="noopener">Twitter</a>
                         <a class="share-btn"
                             href="mailto:?subject={{ page.title | uri_escape }}&body={{ page.description | uri_escape }}%0A%0A{{ page.url | absolute_url | uri_escape }}">Email</a>
-                        <a class="share-btn" onclick="copyLink()">Copy Link</a>
+                        <a class="share-btn" onclick="copyLink()">Copy&nbsp;Link</a>
                     </div>
                 </div>
 
