css for res, index polish

--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,5 +1,5 @@
-<div class="property-contact">
+<div class="signup-contact" id="contact">
     <h2>Looking to Sell?</h2>
     <p>Contact us to get a landing page for your property today.</p>
-    <a href="mailto:uppercrumbs@zinglab.com?subject=Sell%20on%20UpperCrumbs&body=My%20address%20is%20..." class="contact-button">Email for information</a>
+    <a href="mailto:uppercrumbs@zinglab.com?subject=Sell%20on%20UpperCrumbs&body=My%20address%20is%20..." class="signup-contact-button">Email for information</a>
 </div>
