--- a/_layouts/property.html
+++ b/_layouts/property.html
@@ -37,7 +37,7 @@
             <a href="{{ '/' | relative_url }}" class="logo">{{ site.title }}</a>
             <nav class="main-nav">
                 <div class="property-share">
-                    <div class="share-options" id="shareOptions" style="display: block;">
+                    <div class="share-options" id="shareOptions">
                         <a class="share-btn"
                             onclick="copyLink()"
                             href="https://m.facebook.com/sharer.php?u={{ page.url | absolute_url | uri_escape }}"
