css fixes, new index image, stripe

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,9 @@
         <div class="container">
             <p>&copy; {{ 'now' | date: "%Y" }} UpperCrumbs. All rights reserved.</p>
             <p>UpperCrumbs is owned and operated by ZingLab LLC</p>
-            <a class="zinglab" href="https://zinglab.com/?ref=uppercrumbs" target="_blank"><br>Site Managed by ZingLab.com</a>
+            <br>
+            <p>ZingLab and UpperCrumbs are not responsible for claims or statements made on property landing pages. Contact property managers for any questions.</p>
+            <br>
+            <a class="zinglab" href="https://zinglab.com/?ref=uppercrumbs" target="_blank">Site Managed by ZingLab.com</a>
         </div>
     </footer>
