--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,5 +1,6 @@
 <div class="signup-contact" id="contact">
     <h2>Looking to Sell?</h2>
     <p>Contact us to get a landing page for your property today.</p>
-    <a href="mailto:uppercrumbs@zinglab.com?subject=Sell%20on%20UpperCrumbs&body=My%20address%20is%20..." class="signup-contact-button">Email for information</a>
+    <a href="mailto:uppercrumbs@zinglab.com?subject=List%20on%20UpperCrumbs&body=My%20address%20is%20..." class="signup-contact-button">Email for information</a>
+    <a href="https://book.stripe.com/eVq5kC2Fk9o38P480v9IQ0d" class="signup-contact-button" target="_blank">Book your landing&nbsp;page</a>
 </div>
