--- a/_layouts/property.html
+++ b/_layouts/property.html
@@ -20,6 +20,7 @@
     <meta property="twitter:image" content="{{ site.url }}/assets/properties/{{ page.slug }}/{{ page.image_featured }}">
 
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
+    <link rel="icon" href="{{ 'favicon.ico' | relative_url }}">
     <meta name="description" content="{{ page.description | default: site.description }}">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/residential.css' | relative_url }}">
@@ -29,6 +30,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&family=Montserrat:wght@300;400;500;600&display=swap"
         rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-82JLDE33NG"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-82JLDE33NG');
+    </script>
+
 </head>
 
 <body>
